        User Admin: updated Add User and Edit User to allow PDF files for ID documents
        User Admin: added ability to set username formats by role in User Settings
        User Admin: added a button to generate usernames in Add User
        User Admin: added an Available Years of Entry setting to select which years are available in the student application

v14.0.01
--------
	Security
		Fixed role switcher privilege escalation issue

v14.0.00
--------
	Headlines
		Object oriented form API
		Added the ability to manage system notifications and send specific notices to different users
		Activated Albanian, Thai and Vietnamese as complete languages

	Changes With Important Notices
		Attendance: fixed default reason from Pending to blank, reset all reasons for existing Present, Pending logs
		Attendance: dropped legacy tables gibbonPlannerEntryAttendance, gibbonPlannerEntryAttendanceLog

	Significant Changes
		System: added unit and acceptance testing environments for Gibbon developers

	Security
		System: fixed PHP code execution vulnerability
		System: fixed infinite nested index reload bug
		System: tightened rules for valid elements in TinyMCE text fields
		System: removed Allowable HTML from System Settings interface
		System: updated PHPMailer to latest version
		System: removed all code samples from /lib libraries
		System: fixed SVG code execution vulnerability
        System: added input sanitization to public forms

	Tweaks & Bug Fixes
		System: improved Fast Finder student search permissions
		System: added Albanian and Thai as development languages
		System: added Moroccan dirham as a currency option
		System: upgraded jQuery to v2.2.4 and jQuery Migrate to v1.4.1
		System: fixed bug preventing jQuery Chained from working properly
		System: allow user login with either username or email, if email is unique
		System: added Myanmar, Burmese, Filipino to list of languages, fixed Croatian, Ukrainian, Swedish spelling