@@ -41,6 +41,7 @@ if (isActionAccessible($guid, $connection2, '/modules/User Admin/userSettings.ph
     $privacy = $_POST['privacy'];
     $privacyBlurb = (isset($_POST['privacyBlurb'])) ? $_POST['privacyBlurb'] : null;
     $privacyOptions = (isset($_POST['privacyOptions'])) ? $_POST['privacyOptions'] : null;
+    $uniqueEmailAddress = (isset($_POST['uniqueEmailAddress'])) ? $_POST['uniqueEmailAddress'] : 'N';
     $personalBackground = $_POST['personalBackground'];
     $dayTypeOptions = $_POST['dayTypeOptions'];
     $dayTypeText = $_POST['dayTypeText'];
@@ -114,6 +115,15 @@ if (isActionAccessible($guid, $connection2, '/modules/User Admin/userSettings.ph
     try {
         $data = array('value' => $privacyOptions);
         $sql = "UPDATE gibbonSetting SET value=:value WHERE scope='User Admin' AND name='privacyOptions'";
+        $result = $connection2->prepare($sql);
+        $result->execute($data);
+    } catch (PDOException $e) {
+        $fail = true;
+    }
+
+    try {
+        $data = array('value' => $uniqueEmailAddress);
+        $sql = "UPDATE gibbonSetting SET value=:value WHERE scope='User Admin' AND name='uniqueEmailAddress'";
         $result = $connection2->prepare($sql);
         $result->execute($data);
     } catch (PDOException $e) {
