@@ -95,6 +95,7 @@ v15.0.00
         User Admin: added ability to set username formats by role in User Settings
         User Admin: added a button to generate usernames in Add User
         User Admin: added an Available Years of Entry setting to select which years are available in the student application
+		User Admin: added a setting to require a user's primary email address to be unique
 
 v14.0.01
 --------
